--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     <div class="container col-400-12 col-1200-4">
                         <div class="row component-padding">
                             <div class="col-md-12 row-box">
-                                <div class="no-info">Tweet details</div>
+                                <tweet-panel></tweet-panel>
                             </div>
                         </div>
                     </div>
@@ -92,7 +92,7 @@
             </div>
         </div>
     </div>
-    
+
     <!-- map popup -->
     <ng-include src="'./app/view/mapPopup.html'"></ng-include>
     <!-- info popup -->
