The map gets locked to the bottom and right and dynamic zoom. (#85)
* The map gets locked to the bottom and right and dynamic zoom.

* Fix tests and issues from lock map in background.

* Fix tests

--- a/404.html
+++ b/404.html
@@ -55,6 +55,7 @@
     <script src="./app/components/datepicker/DatepickerDirective.js"></script>
     <script src="./app/components/tweetlist/tweetlistDirective.js"></script>
     <script src="./app/components/tweetlist/panelDirective.js"></script>
+    <script src="./app/components/tweetlist/counterDirective.js"></script>
     <script src="./app/components/toolbarSearch/toolbarSearchDirective.js"></script>
     <script src="./app/components/userFilter/userFilterDirective.js"></script>
     <script src="./app/components/geospatialFilter/geospatialFilterDirective.js"></script>
@@ -69,8 +70,9 @@
 
 <body ng-controller="MainController">
 	<ui-view></ui-view>
+    <heatmap></heatmap>
     <div class="container-fluid">
-        <div class="row center-block width-block">
+        <div class="row">
             <div class="container col-400-12 col-800-6 col-1200-4">
                 <div class="row component-padding">
                     <div class="col-xs-12 row-box">
@@ -118,16 +120,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="container col-400-12 col-1200-8 col-1600-9 col-2000-9 col-2800">
-                        <div class="row component-padding">
-                            <div class="row-box heatmap">
-                              <heatmap></heatmap>
-                            </div>
-                        </div>
-                    </div>
-                </div>
             </div>
+
         </div>
     </div>
 
