--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
 
 <body ng-controller="MainController">
 	<ui-view></ui-view>
+    <heatmap></heatmap>
     <div class="container-fluid">
-        <div class="row center-block width-block">
+        <div class="row">
             <div class="container col-400-12 col-800-6 col-1200-4">
                 <div class="row component-padding">
                     <div class="col-xs-12 row-box">
@@ -75,24 +76,16 @@
                     <div class="container col-400-12 col-1200-4">
                         <div class="row component-padding">
                             <div class="col-md-12 row-box">
-                                <div class="no-info">Tweet details</div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="container col-400-12 col-1200-8 col-1600-9 col-2000-12">
-                        <div class="row component-padding">
-                            <div class="row-box heatmap">
-                              <heatmap></heatmap>
+                                <tweet-panel></tweet-panel>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
+
         </div>
     </div>
-    
+
     <!-- map popup -->
     <ng-include src="'./app/view/mapPopup.html'"></ng-include>
     <!-- info popup -->
