--- a/404.html
+++ b/404.html
@@ -56,7 +56,7 @@
     <script src="./app/components/toolbarSearch/toolbarSearchDirective.js"></script>
     <script src="./app/components/userFilter/userFilterDirective.js"></script>
     <script src="./app/components/geospatialFilter/geospatialFilterDirective.js"></script>
-    <script src="./app/components/exportButton/exportButtonDirective.js"></script>
+    <script src="./app/components/resetButton/resetButtonDirective.js"></script>
     <script src="./app/components/heatmap/heatmapDirective.js"></script>
     <script src="./app/components/search/search.js"></script>
     <script src="./app/components/keyword/keywordDirective.js"></script>
@@ -82,22 +82,13 @@
                     </div>
                 </div>
                 <div class="row component-padding">
-                    <div class="col-xs-12 row-box">
-                        <geospatial-filter></geospatial-filter>
-                    </div>
-                </div>
-                <div class="row component-padding">
                     <div class="col-md-12 row-box">
                       <div class="row">
                         <tweetlist></tweetlist>
                       </div>
                     </div>
                 </div>
-                <div class="row component-padding">
-                    <div class="col-md-12 row-box">
-                        <export-button></exportButton>
-                    </div>
-                </div>
+                <reset-button></reset-button>
             </div>
 
             <div class="container col-400-12 col-800-6 col-1200-8">
