--- a/index.html
+++ b/index.html
@@ -46,22 +46,13 @@
                     </div>
                 </div>
                 <div class="row component-padding">
-                    <div class="col-xs-12 row-box">
-                        <geospatial-filter></geospatial-filter>
-                    </div>
-                </div>
-                <div class="row component-padding">
                     <div class="col-md-12 row-box">
                       <div class="row">
                         <tweetlist></tweetlist>
                       </div>
                     </div>
                 </div>
-                <div class="row component-padding">
-                    <div class="col-md-12 row-box">
-                        <export-button></exportButton>
-                    </div>
-                </div>
+                <reset-button></reset-button>
             </div>
 
             <div class="container col-400-12 col-800-6 col-1200-8">
