--- a/index.html
+++ b/index.html
@@ -35,41 +35,41 @@
     <div class="container-fluid">
         <div class="row">
             <div class="container col-400-12 col-800-6 col-1200-4">
-                <div class="row component-padding">
-                    <div class="col-xs-12 row-box">
-                        <toolbar-search number-keywords="10"></toolbar-search>
-                    </div>
-                </div>
-                <div class="row component-padding">
-                    <div class="col-xs-12 row-box" row-box>
-                        <user-filter></user-filter>
-                    </div>
-                </div>
-                <div class="row component-padding">
-                    <div class="col-md-12 row-box">
-                      <div class="row">
-                        <tweetlist></tweetlist>
-                      </div>
-                    </div>
-                </div>
+                <card-wrapper>
+                    <toolbar-search number-keywords="10"></toolbar-search>
+                </card-wrapper>
+
+                <card-wrapper>
+                    <user-filter></user-filter>
+                </card-wrapper>
+
+                <card-wrapper>
+                    <tweetlist></tweetlist>
+                </card-wrapper>
+
                 <reset-button></reset-button>
             </div>
 
-            <div class="container col-400-12 col-800-6 col-1200-8">
+            <div class="container col-400-12 col-800-6 col-1200-8 col-1600-9">
                 <div class="row">
-                    <div class="container col-400-12 col-1200-4">
-                        <div class="row component-padding">
-                            <div class="col-md-12 row-box"q>
-                                <date-picker></date-picker>
+                    <div class="container col-400-12 col-1200-4 col-1600-6">
+                        <div class="row">
+                            <div class="container col-400-12 col-1600-3">
+                                <card-wrapper>
+                                    <date-picker></date-picker>
+                                </card-wrapper>
+                            </div>
+                            <div class="container col-400-12 col-1600-3">
+                                <card-wrapper>
+                                    <time-histogram barId="inbar"></time-histogram>
+                                </card-wrapper>
                             </div>
                         </div>
                     </div>
-                    <div class="container col-400-12 col-1200-4">
-                        <div class="row component-padding">
-                            <div class="col-md-12 row-box">
-                                <tweet-panel></tweet-panel>
-                            </div>
-                        </div>
+                    <div class="container col-400-12 col-1600-3">
+                        <card-wrapper>
+                            <tweet-panel></tweet-panel>
+                        </card-wrapper>
                     </div>
                 </div>
             </div>
