--- a/404.html
+++ b/404.html
@@ -62,6 +62,7 @@
     <script src="./app/components/search/search.js"></script>
     <script src="./app/components/keyword/keywordDirective.js"></script>
     <script src="./app/components/cardwrapper/cardwrapperDirective.js"></script>
+    <script src="./app/components/keywordInput/keywordInputDirective.js"></script>
 
     <script src="./tmp/templates.js"></script>
 
