--- a/404.html
+++ b/404.html
@@ -46,6 +46,7 @@
     <script src="./app/service/heightModule.js"></script>
     <script src="./app/service/PanelInformationService.js"></script>
     <script src="./app/service/dateTimeService.js"></script>
+    <script src="./app/service/filterKeywordsService.js"></script>
 
     <!-- APP components -->
     <script src="./app/components/modules.js"></script>
