--- a/404.html
+++ b/404.html
@@ -64,6 +64,7 @@
     <script src="./app/components/keyword/keywordDirective.js"></script>
     <script src="./app/components/cardwrapper/cardwrapperDirective.js"></script>
     <script src="./app/components/keywordInput/keywordInputDirective.js"></script>
+    <script src="./app/components/responsiveView/responsiveViewDirective.js"></script>
 
     <script src="./tmp/templates.js"></script>
 
@@ -73,51 +74,7 @@
 	<ui-view></ui-view>
     <heatmap></heatmap>
 
-<!-- > 1200 -->
-
-    <div class="container-fluid">
-        <div class="row">
-            <div class="container col-400-12 col-800-12 col-1200-4">
-                <card-wrapper>
-                    <toolbar-search number-keywords="10"></toolbar-search>
-                </card-wrapper>
-
-                <card-wrapper>
-                    <user-filter></user-filter>
-                </card-wrapper>
-
-                <card-wrapper>
-                    <tweetlist></tweetlist>
-                </card-wrapper>
-
-                <reset-button></reset-button>
-            </div>
-
-            <div class="container col-400-12 col-800-12 col-1200-8 col-1600-9">
-                <div class="row">
-                    <div class="container col-400-12 col-1200-4 col-1600-6">
-                        <div class="row">
-                            <div class="container col-400-12 col-1600-3">
-                                <card-wrapper>
-                                    <date-picker></date-picker>
-                                </card-wrapper>
-                            </div>
-                            <div class="container col-400-12 col-1600-3">
-                                <card-wrapper>
-                                    <time-histogram barId="inbar"></time-histogram>
-                                </card-wrapper>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="container col-400-12 col-1600-3">
-                            <tweet-panel></tweet-panel>
-                    </div>
-                </div>
-            </div>
-
-        </div>
-    </div>
-
+    <responsive-layout></responsive-layout>
 
     <!-- map popup -->
     <ng-include src="'./app/view/mapPopup.html'"></ng-include>
