--- a/404.html
+++ b/404.html
@@ -56,6 +56,7 @@
     <script src="./app/service/PanelInformationService.js"></script>
     <script src="./app/service/dateTimeService.js"></script>
     <script src="./app/service/filterKeywordsService.js"></script>
+    <script src="./app/service/dataCacheService.js"></script>
 
     <!-- APP components -->
     <script src="./app/components/modules.js"></script>
