--- a/404.html
+++ b/404.html
@@ -24,6 +24,7 @@
     <script src="./assets/lib/proj4js/proj4.js"></script>
     <script src="./config/3857.js"></script>
     <script src="./assets/lib/ol3/ol.js"></script>
+    <script src="./assets/lib/stament/tile.stamen.js"></script>
     <script src="./assets/lib/moment/min/moment.min.js"></script>
     <script src="./assets/lib/geostats/lib/geostats.min.js"></script>
 
