131 export button rebirth (#132)
* Add export functions

* Insert expor button and his styles

* Fix linter

* fix export button padding

--- a/404.html
+++ b/404.html
@@ -71,6 +71,7 @@
     <script src="./app/components/toolbarSearch/toolbarSearchDirective.js"></script>
     <script src="./app/components/userFilter/userFilterDirective.js"></script>
     <script src="./app/components/geospatialFilter/geospatialFilterDirective.js"></script>
+    <script src="./app/components/exportButton/exportButtonDirective.js"></script>
     <script src="./app/components/resetButton/resetButtonDirective.js"></script>
     <script src="./app/components/heatmap/heatmapDirective.js"></script>
     <script src="./app/components/search/search.js"></script>
