[WIP] Y axis time histogram (#144)
Y axis time histogram

--- a/404.html
+++ b/404.html
@@ -60,6 +60,7 @@
     <script src="./app/service/filterKeywordsService.js"></script>
     <script src="./app/service/dataCacheService.js"></script>
     <script src="./app/service/dataverseService.js"></script>
+    <script src="./app/service/numberService.js"></script>
 
     <!-- APP components -->
     <script src="./app/components/modules.js"></script>
