create a message componet to notice on the BOP app

--- a/404.html
+++ b/404.html
@@ -82,6 +82,7 @@
     <script src="./app/components/responsiveView/responsiveViewDirective.js"></script>
     <script src="./app/components/dataverseButton/dataverseButtonDirective.js"></script>
     <script src="./app/components/modalTweets/modalTweetsDirective.js"></script>
+    <script src="./app/components/alert/alertDirective.js"></script>
 
     <script src="./tmp/templates.js"></script>
 
