create  factory for solrHeatmapApp variable

--- a/404.html
+++ b/404.html
@@ -43,47 +43,7 @@
     <link rel="stylesheet" href="./tmp/styles.css">
 
     <!-- APP JS -->
-    <script src="./app/app.js"></script>
-    <script src="./app/controller/InfoWindowCtrl.js"></script>
-    <script src="./app/controller/Main.js"></script>
-    <script src="./app/controller/BackgroundLayer.js"></script>
-    <script src="./app/service/Map.js"></script>
-    <script src="./app/service/Normalize.js"></script>
-    <script src="./app/service/HeatMapSourceGenerator.js"></script>
-    <script src="./app/service/searchFilter.js"></script>
-    <script src="./app/service/queryService.js"></script>
-    <script src="./app/service/heightModule.js"></script>
-    <script src="./app/service/PanelInformationService.js"></script>
-    <script src="./app/service/dateTimeService.js"></script>
-    <script src="./app/service/filterKeywordsService.js"></script>
-    <script src="./app/service/dataCacheService.js"></script>
-    <script src="./app/service/dataverseService.js"></script>
-    <script src="./app/service/numberService.js"></script>
-
-    <!-- APP components -->
-    <script src="./app/components/modules.js"></script>
-    <script src="./app/components/histogram/HistogramDirective.js"></script>
-    <script src="./app/components/histogram/legendDirective.js"></script>
-    <script src="./app/components/datepicker/DatepickerDirective.js"></script>
-    <script src="./app/components/tweetlist/tweetlistDirective.js"></script>
-    <script src="./app/components/tweetlist/panelDirective.js"></script>
-    <script src="./app/components/tweetlist/counterDirective.js"></script>
-    <script src="./app/components/buttonPanel/buttonPanelDirective.js"></script>
-    <script src="./app/components/toolbarSearch/toolbarSearchDirective.js"></script>
-    <script src="./app/components/userFilter/userFilterDirective.js"></script>
-    <script src="./app/components/geospatialFilter/geospatialFilterDirective.js"></script>
-    <script src="./app/components/exportButton/exportButtonDirective.js"></script>
-    <script src="./app/components/resetButton/resetButtonDirective.js"></script>
-    <script src="./app/components/heatmap/heatmapDirective.js"></script>
-    <script src="./app/components/search/search.js"></script>
-    <script src="./app/components/keyword/keywordDirective.js"></script>
-    <script src="./app/components/cardwrapper/cardwrapperDirective.js"></script>
-    <script src="./app/components/keywordInput/keywordInputDirective.js"></script>
-    <script src="./app/components/responsiveView/responsiveViewDirective.js"></script>
-    <script src="./app/components/dataverseButton/dataverseButtonDirective.js"></script>
-    <script src="./app/components/modalTweets/modalTweetsDirective.js"></script>
-
-    <script src="./tmp/templates.js"></script>
+    <script src="./tmp/hm-client-es6.js"></script>
 
 </head>
 
