Separate Normalize, height, number and query services in a independent lib

--- a/404.html
+++ b/404.html
@@ -34,16 +34,12 @@
             src="https://maps.googleapis.com/maps/api/js?v=3&key=AIzaSyAjtdt_Db2IOZDVYznVqot45xUs1tNhhDw"></script>
     <script src="./assets/lib/ol3-google-maps/dist/ol3gm.js"></script>
 
-    <!-- additional ol3 features -->
-    <!-- filters -->
-    <script type="text/javascript" src="./assets/lib/ol3-ext/filter/filter.js"></script>
-    <script type="text/javascript" src="./assets/lib/ol3-ext/filter/maskfilter.js"></script>
-
     <!-- APP CSS -->
     <link rel="stylesheet" href="./tmp/styles.css">
 
     <!-- APP JS -->
     <script src="./tmp/hm-client-es6.js"></script>
+    <script src="./tmp/bop-lib.js"></script>
 
 </head>
 
